<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainerHomeActivity"
    android:background="@color/Black"
    android:orientation="vertical"
    android:layout_gravity="top">


    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/HV"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

    </LinearLayout>


    <ImageButton
        android:id="@+id/logoutbtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/backarrow50"
        android:backgroundTint="@color/White"
        app:layout_constraintStart_toStartOf="@+id/menuBar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"

        ></ImageButton>

    <TextView
        android:id="@+id/wellcometv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="hello *****!"
        android:textColor="@color/White"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_margin="10dp"

        >
    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profilecv"
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/wellcometv"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:backgroundTint="@color/UnselectedField"


        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/porfilepic"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/heavyspace_bg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
            ></ImageView>
        <TextView
            android:id="@+id/profiletv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/porfilepic"
            android:text="****"
            android:textSize="14dp"
            android:textColor="@color/White"
            ></TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>


     </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/statsCV"
        android:layout_width="250dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/wellcometv"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/UnselectedField"

        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/actualWorkoutsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actual_workouts"
                android:textSize="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="10dp"
                android:textColor="@color/White"
                ></TextView>

            <TextView
                android:id="@+id/img1txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@id/img1"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/White"
                android:layout_marginRight="135dp"
                ></TextView>
        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/levelbegginer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/img2"
            android:layout_marginBottom="5dp"
            ></ImageView>
            <TextView
                android:id="@+id/img2txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@id/img2"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/White"
                android:layout_marginRight="85dp"
                ></TextView>
        <ImageView
            android:id="@+id/img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/levelmiddle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/img3"
            android:layout_marginBottom="10dp"
            > </ImageView>
            <TextView
                android:id="@+id/img3txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@id/img3"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/White"
                android:layout_marginRight="35dp"
                ></TextView>
        <ImageView
            android:id="@+id/img3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/leveladvanced"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            >
"
            ></ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/radioGroupLevels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/statsCV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:checkedButton="@id/allRB"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"




        >
        <RadioButton
            android:id="@+id/allRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textColor="@color/White"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="10dp"

            ></RadioButton>
        <RadioButton
            android:id="@+id/begginerRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beginner"
            android:textColor="@color/White"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"

            ></RadioButton>
        <RadioButton
            android:id="@+id/middleRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle"
            android:textColor="@color/White"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="15dp"

            ></RadioButton>
        <RadioButton
            android:id="@+id/advancedRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advanced"
            android:textColor="@color/White"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"


            ></RadioButton>
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWorkout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/statsCV"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"

        ></androidx.recyclerview.widget.RecyclerView>

    <androidx.cardview.widget.CardView
        android:id="@+id/createWorkoutCV"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="180dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:backgroundTint="#00FFFFFF"
        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/historicstyle"
            >


            <LinearLayout
                android:id="@+id/historicalTopBar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/roundedhvcolor"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_workout"
                    android:textColor="@color/White"
                    android:textSize="20dp"
                    android:layout_margin="10dp"
                    ></TextView>

            </LinearLayout>
            <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="3dp"

            ></com.google.android.material.divider.MaterialDivider>

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/newNametv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newUserName"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="10dp"
                    android:textColor="@color/White"
                    android:textSize="15dp"
                    ></TextView>
                <EditText
                    android:id="@+id/newNameet"
                    android:layout_width="120dp"
                    android:layout_height="25dp"
                    app:layout_constraintTop_toBottomOf="@+id/newNametv"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:background="@color/White"
                    android:textSize="15dp"

                    ></EditText>
                <TextView
                    android:id="@+id/newUrltv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level"
                    app:layout_constraintTop_toBottomOf="@id/newNameet"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="10dp"
                    android:textColor="@color/White"
                    android:textSize="15dp"

                    ></TextView>
                <EditText
                    android:id="@+id/newUrlet"
                    android:layout_width="120dp"
                    android:layout_height="25dp"
                    app:layout_constraintTop_toBottomOf="@+id/newUrltv"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:background="@color/White"
                    android:textSize="15dp"

                    ></EditText>


                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/createDivider"
                    android:layout_width="2dp"
                    android:layout_height="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:dividerColor="@color/Black"
                    ></com.google.android.material.divider.MaterialDivider>

                <TextView
                    android:id="@+id/newLeveltv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/createDivider"
                    android:text="@string/level"
                    android:textColor="@color/White"
                    android:layout_marginVertical="10dp"
                    android:textSize="15dp"
                    android:layout_marginRight="55dp"

                    ></TextView>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/createDivider"
                    app:layout_constraintTop_toBottomOf="@+id/newLeveltv"


                    >

                    <RadioButton
                        android:id="@+id/newBegginerRB"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:text="@string/beginner"
                        android:textColor="@color/White"
                        android:checked="true"
                        android:drawableTint="@color/HV"
                        ></RadioButton>
                    <RadioButton
                        android:id="@+id/newMiddleRB"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:text="@string/middle"
                        android:textColor="@color/White"
                        ></RadioButton>
                    <RadioButton
                        android:id="@+id/newAdvancedRB"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:text="@string/advanced"
                        android:textColor="@color/White"
                        ></RadioButton>

                </RadioGroup>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:id="@+id/menuBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/UnselectedField"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        >
        <ImageButton
            android:id="@+id/statsWorkout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/profilepic"></ImageButton>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="2dp"
            android:layout_height="80dp"
            app:dividerColor="@color/Black"
            android:layout_margin="60dp"
            >
            </com.google.android.material.divider.MaterialDivider>
        <ImageButton
            android:id="@+id/createWorkout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/createworkout"
            ></ImageButton>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>